bai的分支提交的东西

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <h3>日日月月</h3> 
     <p>刀郎 西海情歌很好听<p>
     <p>小李分支书写内容<p>
-    <script>
+
+    <p>滴滴滴，下雨啦<p>
+
+    <p>白的分支，写的东西<p>
+    <script
         
     </script>
 </body>
